--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
-scikit-learn==0.19.1
-pandas==0.22.0
-numpy==1.14.0
-seaborn==0.8.1
+-i https://pypi.org/simple
+catboost==0.10.2
+cycler==0.10.0
+enum34==1.1.6
+jinja2==2.10
+kiwisolver==1.0.1; python_version != '3.2.*'
+lightgbm==2.2.0
+markupsafe==1.0
+matplotlib==3.0.0; python_version != '3.2.*'
+numpy==1.15.2
+pandas-profiling==1.4.1
+pandas==0.23.4
+pyparsing==2.2.1; python_version != '3.0.*'
+python-dateutil==2.7.3
+pytz==2018.5
+scikit-learn==0.20.0
+scikit-optimize==0.5.2
+scipy==1.1.0; python_version != '3.3.*'
+seaborn==0.9.0
+six==1.11.0
+xgboost==0.80
